# cpp-http-server

./: .gitignore  CMakeLists.txt  CppHttpServer  README.md
src/: CMakeLists.txt  Main.cpp
src/Application/: Application.cpp  Application.h
src/Requests/: HttpRequest.cpp  HttpRequest.h  Methods.h  Protocols.h
src/Server/: HttpServer.cpp  HttpServer.h  Server.h
src/Socket/: ISocket.h  TCPSocket.cpp  TCPSocket.h  TCPSocket4.cpp  TCPSocket4.h
src/Utils/: Consts.h  Exc.h  Macros.h
tests/: a.out  server  server.c
